--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "svelte-tutorials",
 	"version": "0.0.1",
+	"license": "MIT",
 	"scripts": {
 		"dev": "sapper dev",
 		"build": "sapper build --legacy",
@@ -12,6 +13,7 @@
 	},
 	"dependencies": {
 		"compression": "^1.7.1",
+		"lodash": "^4.17.14",
 		"normalize.css": "^8.0.1",
 		"polka": "^0.5.0",
 		"sirv": "^0.4.0"
