--- a/package.json
+++ b/package.json
@@ -6,10 +6,7 @@
 		"dev": "sapper dev",
 		"build": "sapper build --legacy",
 		"export": "sapper export --legacy",
-		"start": "node __sapper__/build",
-		"cy:run": "cypress run",
-		"cy:open": "cypress open",
-		"test": "run-p --race dev cy:run"
+		"start": "node __sapper__/build"
 	},
 	"dependencies": {
 		"compression": "^1.7.1",
