--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"start": "node __sapper__/build"
 	},
 	"dependencies": {
+		"airtable": "^0.6.0",
 		"compression": "^1.7.1",
 		"lodash": "^4.17.14",
 		"normalize.css": "^8.0.1",
@@ -25,6 +26,7 @@
 		"rollup": "^1.12.0",
 		"rollup-plugin-babel": "^4.0.2",
 		"rollup-plugin-commonjs": "^10.0.0",
+		"rollup-plugin-json": "^4.0.0",
 		"rollup-plugin-node-resolve": "^5.2.0",
 		"rollup-plugin-replace": "^2.0.0",
 		"rollup-plugin-svelte": "^5.0.1",
