--- a/package.json
+++ b/package.json
@@ -1,18 +1,25 @@
 {
-	"name": "svelte-tutorials",
-	"version": "0.0.1",
+	"name": "barnsworthburning-portfolio",
+	"version": "0.0.2",
 	"license": "MIT",
 	"scripts": {
-		"dev": "sapper dev",
+		"dev": "cross-env NODE_ENV=dev npm-run-all --parallel dev:app dev:server",
+		"dev:app": "sapper dev",
+		"dev:server": "netlify-lambda serve functions",
 		"build": "sapper build --legacy",
 		"export": "sapper export --legacy",
-		"start": "node __sapper__/build"
+		"start": "node __sapper__/build",
+		"netlify:build": "run-p netlify:build:**",
+		"netlify:build:app": "sapper export",
+		"netlify:build:lambda": "netlify-lambda build functions"
 	},
 	"dependencies": {
 		"airtable": "^0.6.0",
 		"compression": "^1.7.1",
+		"cross-env": "^5.2.0",
 		"lodash": "^4.17.14",
 		"marked": "^0.7.0",
+		"netlify-lambda": "^1.5.0",
 		"normalize.css": "^8.0.1",
 		"polka": "^0.5.0",
 		"sirv": "^0.4.0"
@@ -23,6 +30,7 @@
 		"@babel/plugin-transform-runtime": "^7.0.0",
 		"@babel/preset-env": "^7.0.0",
 		"@babel/runtime": "^7.0.0",
+		"http-proxy-middleware": "^0.19.1",
 		"npm-run-all": "^4.1.5",
 		"rollup": "^1.12.0",
 		"rollup-plugin-babel": "^4.0.2",
