--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,4 @@
   command = "npm run netlify:build"
   functions = "lambda"
   publish = "__sapper__/export"
+  environment = { AWS_LAMBDA_JS_RUNTIME = "nodejs10.x" }
