--- a/netlify.toml
+++ b/netlify.toml
@@ -3,3 +3,7 @@
   functions = "lambda"
   publish = "__sapper__/export"
   environment = { AWS_LAMBDA_JS_RUNTIME = "nodejs10.x" }
+
+[[redirects]]
+  from = "/blog/*"
+  to = "/blog"
