--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,6 +1,6 @@
 {
-	"background_color": "#ffffff",
-	"theme_color": "#333333",
+	"background_color": "#fffde6",
+	"theme_color": "#a72517",
 	"name": "barnsworthburning",
 	"short_name": "barnsworthburning",
 	"display": "minimal-ui",
