--- a/netlify.toml
+++ b/netlify.toml
@@ -1,21 +1,14 @@
 [build]
   command = "npm run netlify:build"
-  functions = "lambda"
   publish = "__sapper__/export"
   environment = { AWS_LAMBDA_JS_RUNTIME = "nodejs10.x" }
 
-# [[redirects]]
-#   from = "/api/*"
-#   to = "https://barnsworthburning-api.netlify.com/.netlify/functions/:splat"
-#   status = 200
+[[redirects]]
+  from = "/api/*"
+  to = "https://barnsworthburning-api.netlify.com/.netlify/functions/:splat"
+  status = 200
 
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
-
-# https://forum.blockstack.org/t/deploying-to-netlify-with-github-cors-headers/7700
-[[headers]]
-  for = "/*"
-    [headers.values]
-      Access-Control-Allow-Origin = "*"
