--- a/package.json
+++ b/package.json
@@ -3,23 +3,16 @@
 	"version": "0.0.2",
 	"license": "MIT",
 	"scripts": {
-		"dev": "cross-env NODE_ENV=dev npm-run-all --parallel dev:app dev:server",
-		"dev:app": "sapper dev",
-		"dev:server": "netlify-lambda serve functions",
+		"dev": "sapper dev",
 		"build": "sapper build --legacy",
 		"export": "sapper export --legacy",
 		"start": "node __sapper__/build",
-		"netlify:build": "run-p netlify:build:**",
-		"netlify:build:app": "sapper export",
-		"netlify:build:lambda": "netlify-lambda build functions"
+		"netlify:build": "sapper export"
 	},
 	"dependencies": {
-		"airtable": "^0.6.0",
 		"compression": "^1.7.1",
-		"cross-env": "^5.2.0",
 		"lodash": "^4.17.14",
 		"marked": "^0.7.0",
-		"netlify-lambda": "^1.5.0",
 		"normalize.css": "^8.0.1",
 		"polka": "^0.5.0",
 		"sirv": "^0.4.0"
@@ -31,7 +24,6 @@
 		"@babel/preset-env": "^7.0.0",
 		"@babel/runtime": "^7.0.0",
 		"http-proxy-middleware": "^0.19.1",
-		"npm-run-all": "^4.1.5",
 		"rollup": "^1.12.0",
 		"rollup-plugin-babel": "^4.0.2",
 		"rollup-plugin-commonjs": "^10.0.0",
