Updates for lighthouse audits

--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,6 +1,6 @@
 {
 	"background_color": "#fffde6",
-	"theme_color": "#a72517",
+	"theme_color": "#2d3461",
 	"name": "barnsworthburning",
 	"short_name": "barnsworthburning",
 	"display": "minimal-ui",
