--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
 	"dependencies": {
 		"compression": "^1.7.1",
 		"lodash": "^4.17.15",
-		"marked": "^0.7.0",
 		"normalize.css": "^8.0.1",
 		"polka": "^0.5.0",
+		"remarkable": "^1.7.4",
 		"sirv": "^0.4.0"
 	},
 	"devDependencies": {
