--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,6 +1,6 @@
 {
-	"background_color": "#fffde6",
-	"theme_color": "#2d3461",
+	"background_color": "#f2f1f0",
+	"theme_color": "#b50007",
 	"name": "barnsworthburning",
 	"short_name": "barnsworthburning",
 	"display": "minimal-ui",
