--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"build": "sapper build --legacy",
 		"export": "sapper export --legacy",
 		"serve": "node __sapper__/build",
-		"netlify:build": "sapper export"
+		"netlify:build": "sapper export --legacy"
 	},
 	"dependencies": {
 		"compression": "^1.7.1",
@@ -31,6 +31,6 @@
 		"rollup-plugin-svelte": "^5.0.1",
 		"rollup-plugin-terser": "^5.1.1",
 		"sapper": "^0.27.8",
-		"svelte": "^3.8.1"
+		"svelte": "^3.9.0"
 	}
 }
