--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "barnsworthburning-portfolio",
-	"version": "0.0.2",
+	"name": "barnsworthburning",
+	"version": "1.0.0",
 	"license": "MIT",
 	"scripts": {
 		"dev": "sapper dev",
@@ -24,7 +24,7 @@
 		"@babel/plugin-transform-runtime": "^7.6.2",
 		"@babel/preset-env": "^7.6.2",
 		"@babel/runtime": "^7.6.2",
-		"rollup": "^1.21.4",
+		"rollup": "^1.23.0",
 		"rollup-plugin-babel": "^4.0.2",
 		"rollup-plugin-commonjs": "^10.1.0",
 		"rollup-plugin-node-resolve": "^5.2.0",
