--- a/package.json
+++ b/package.json
@@ -1,7 +1,17 @@
 {
 	"name": "barnsworthburning",
-	"version": "1.0.0",
+	"description": "A commonplace book.",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/Aias/barnsworthburning"
+	},
+	"version": "1.1.1",
 	"license": "MIT",
+	"author": {
+		"name": "Nick Trombley",
+		"email": "trombley.nick@gmail.com",
+		"url": "https://nicktrombley.design"
+	},
 	"scripts": {
 		"dev": "sapper dev",
 		"build": "sapper build --legacy",
@@ -24,7 +34,7 @@
 		"@babel/plugin-transform-runtime": "^7.6.2",
 		"@babel/preset-env": "^7.6.3",
 		"@babel/runtime": "^7.6.3",
-		"rollup": "^1.26.0",
+		"rollup": "^1.26.3",
 		"rollup-plugin-babel": "^4.0.2",
 		"rollup-plugin-commonjs": "^10.1.0",
 		"rollup-plugin-node-resolve": "^5.2.0",
