--- a/package.json
+++ b/package.json
@@ -33,11 +33,11 @@
 		"@babel/plugin-transform-runtime": "^7.10.4",
 		"@babel/preset-env": "^7.10.4",
 		"@babel/runtime": "^7.10.4",
+		"@rollup/plugin-babel": "^5.1.0",
+		"@rollup/plugin-commonjs": "^13.0.1",
+		"@rollup/plugin-node-resolve": "^8.4.0",
+		"@rollup/plugin-replace": "^2.3.3",
 		"rollup": "^2.21.0",
-		"rollup-plugin-babel": "^4.4.0",
-		"rollup-plugin-commonjs": "^10.1.0",
-		"rollup-plugin-node-resolve": "^5.2.0",
-		"rollup-plugin-replace": "^2.0.0",
 		"rollup-plugin-svelte": "^5.2.3",
 		"rollup-plugin-terser": "^6.1.0",
 		"sapper": "^0.27.16",
