--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 	},
 	"dependencies": {
 		"compression": "^1.7.1",
+		"node-fetch": "^2.6.0",
 		"polka": "^0.5.0",
 		"remarkable": "^2.0.1",
 		"remarkable-meta": "^1.0.1",
