--- a/netlify.toml
+++ b/netlify.toml
@@ -2,7 +2,8 @@
   command = "npm run build"
   publish = "build/"
   functions = "functions/"
+  environment = { NODE_VERSION = "14" }
 
 [functions]
   node_bundler = "esbuild"
-  external_node_modules = ["remarkable", "remarkable-meta", "airtable"]
+  # external_node_modules = ["remarkable", "remarkable-meta", "airtable"]
