--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
 		"url": "https://github.com/Aias/barnsworthburning"
 	},
 	"version": "3.0.0",
+	"engines": {
+		"node": "14"
+	},
 	"license": "MIT",
 	"author": {
 		"name": "Nick Trombley",
@@ -19,11 +22,11 @@
 	},
 	"dependencies": {
 		"@sveltejs/adapter-node": "^1.0.0-next.55",
-		"@sveltejs/kit": "^1.0.0-next.186",
+		"@sveltejs/kit": "^1.0.0-next.192",
 		"airtable": "^0.11.1",
 		"remarkable": "^2.0.1",
 		"remarkable-meta": "^1.0.1",
 		"svelte": "^3.44.0",
-		"vite": "^2.6.10"
+		"vite": "^2.6.13"
 	}
 }
