Migrate from prerelease version of sveltekit to 1.0

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,10 @@
 .DS_Store
-/node_modules/
-yarn-error.log
-*.code-workspace
-build
-functions
-_app
-.svelte
-.svelte-kit
+node_modules
+/build
+/.svelte-kit
+/package
 .env
-__sapper__
-src/node_modules
-.vercel_build_output
+.env.*
+!.env.example
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
