--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
 	"name": "barnsworthburning",
-	"description": "A commonplace book.",
+	"version": "4.0.0",
+	"engines": {
+		"node": "18"
+	},
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/Aias/barnsworthburning"
-	},
-	"version": "3.0.0",
-	"engines": {
-		"node": "14"
 	},
 	"license": "MIT",
 	"author": {
@@ -15,18 +14,21 @@
 		"email": "trombley.nick@gmail.com",
 		"url": "https://nicktrombley.design"
 	},
-	"type": "module",
 	"scripts": {
-		"dev": "svelte-kit dev",
-		"build": "svelte-kit build"
+		"dev": "vite dev",
+		"build": "vite build",
+		"preview": "vite preview"
 	},
+	"devDependencies": {
+		"@sveltejs/adapter-node": "^1.1.1",
+		"@sveltejs/kit": "^1.0.0",
+		"svelte": "^3.54.0",
+		"vite": "^4.0.0"
+	},
+	"type": "module",
 	"dependencies": {
-		"@sveltejs/adapter-node": "^1.0.0-next.66",
-		"@sveltejs/kit": "^1.0.0-next.240",
-		"airtable": "^0.11.1",
+		"airtable": "^0.11.6",
 		"remarkable": "^2.0.1",
-		"remarkable-meta": "^1.0.1",
-		"svelte": "^3.46.2",
-		"vite": "^2.7.13"
+		"remarkable-meta": "^1.0.1"
 	}
 }
