--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "barnsworthburning",
 	"version": "4.0.0",
 	"engines": {
-		"node": "18"
+		"node": "17.x"
 	},
 	"repository": {
 		"type": "git",
