--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-node": "^1.3.1",
-		"@sveltejs/kit": "^1.25.2",
-		"svelte": "^4.2.1",
-		"vite": "^4.4.11"
+		"@sveltejs/kit": "^1.26.0",
+		"svelte": "^4.2.2",
+		"svelte-preprocess": "^5.0.4",
+		"vite": "^4.5.0"
 	},
 	"type": "module",
 	"dependencies": {
+		"@radix-ui/colors": "^3.0.0",
 		"airtable": "^0.12.2",
 		"remarkable": "^2.0.1",
 		"remarkable-meta": "^1.0.1"
