--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-node": "^1.3.1",
-		"@sveltejs/kit": "^1.26.0",
-		"svelte": "^4.2.2",
-		"svelte-preprocess": "^5.0.4",
+		"@sveltejs/kit": "^1.27.5",
+		"svelte": "^5.0.0-next.2",
+		"svelte-preprocess": "^5.1.0",
 		"vite": "^4.5.0"
 	},
 	"type": "module",
