--- a/package.json
+++ b/package.json
@@ -21,15 +21,15 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-node": "^1.3.1",
-		"@sveltejs/kit": "^1.27.5",
-		"svelte": "^5.0.0-next.2",
-		"svelte-preprocess": "^5.1.0",
+		"@sveltejs/kit": "^1.27.6",
+		"svelte": "next",
 		"vite": "^4.5.0"
 	},
 	"type": "module",
 	"dependencies": {
 		"@radix-ui/colors": "^3.0.0",
 		"airtable": "^0.12.2",
+		"normalize.css": "^8.0.1",
 		"remarkable": "^2.0.1",
 		"remarkable-meta": "^1.0.1"
 	}
