--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
 	"devDependencies": {
 		"@sveltejs/adapter-node": "^1.3.1",
 		"@sveltejs/kit": "^1.27.6",
-		"svelte": "next",
+		"svelte": "^5.0.0-next.3",
 		"vite": "^4.5.0"
 	},
 	"type": "module",
