--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
 	"devDependencies": {
 		"@sveltejs/adapter-node": "^1.3.1",
 		"@sveltejs/kit": "^1.27.6",
+		"sass": "^1.69.5",
 		"svelte": "^5.0.0-next.4",
+		"svelte-preprocess": "^5.1.0",
 		"vite": "^4.5.0"
 	},
 	"type": "module",
