--- a/package.json
+++ b/package.json
@@ -23,13 +23,12 @@
 		"@sveltejs/adapter-node": "^1.3.1",
 		"@sveltejs/kit": "^1.27.6",
 		"sass": "^1.69.5",
-		"svelte": "^4.2.7",
+		"svelte": "next",
 		"svelte-preprocess": "^5.1.1",
-		"vite": "^5.0.2"
+		"vite": "^5.0.3"
 	},
 	"type": "module",
 	"dependencies": {
-		"@notionhq/client": "^2.2.13",
 		"@radix-ui/colors": "^3.0.0",
 		"airtable": "^0.12.2",
 		"normalize.css": "^8.0.1",
