--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
 		"@sveltejs/adapter-node": "^1.3.1",
 		"@sveltejs/kit": "^1.27.6",
 		"sass": "^1.69.5",
-		"svelte": "next",
+		"svelte": "^5.0.0-next.15",
 		"svelte-preprocess": "^5.1.1",
-		"vite": "^5.0.3"
+		"vite": "^5.0.4"
 	},
 	"type": "module",
 	"dependencies": {
