--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
 		"preview": "vite preview"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-node": "^1.3.1",
-		"@sveltejs/kit": "^1.30.3",
+		"@sveltejs/adapter-node": "^2.0.0",
+		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"sass": "^1.69.5",
 		"svelte": "^4.2.8",
 		"svelte-preprocess": "^5.1.2",
-		"vite": "^5.0.8"
+		"vite": "^5.0.10"
 	},
 	"type": "module",
 	"dependencies": {
