--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "barnsworthburning",
 	"version": "4.0.0",
+	"type": "module",
 	"engines": {
 		"node": "18.x"
 	},
@@ -17,23 +18,36 @@
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"lint": "prettier --check . && eslint .",
+		"format": "prettier --write ."
 	},
-	"devDependencies": {
-		"@sveltejs/adapter-node": "^4.0.1",
-		"@sveltejs/kit": "^2.5.0",
-		"@sveltejs/vite-plugin-svelte": "^3.0.2",
-		"sass": "^1.70.0",
-		"svelte": "^5.0.0-next.54",
-		"svelte-preprocess": "^5.1.3",
-		"vite": "^5.1.2"
-	},
-	"type": "module",
 	"dependencies": {
 		"@radix-ui/colors": "^3.0.0",
 		"airtable": "^0.12.2",
 		"normalize.css": "^8.0.1",
 		"remarkable": "^2.0.1",
 		"remarkable-meta": "^1.0.1"
+	},
+	"devDependencies": {
+		"@sveltejs/adapter-node": "^4.0.1",
+		"@sveltejs/kit": "^2.5.0",
+		"@sveltejs/vite-plugin-svelte": "^3.0.2",
+		"@types/eslint": "8.56.0",
+		"@typescript-eslint/eslint-plugin": "^6.0.0",
+		"@typescript-eslint/parser": "^6.0.0",
+		"eslint": "^8.56.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-svelte": "^2.36.0-next.4",
+		"prettier": "^3.1.1",
+		"prettier-plugin-svelte": "^3.1.2",
+		"sass": "^1.70.0",
+		"svelte": "^5.0.0-next.54",
+		"svelte-check": "^3.6.0",
+		"tslib": "^2.4.1",
+		"typescript": "^5.0.0",
+		"vite": "^5.1.3"
 	}
 }
