--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
 	"dependencies": {
 		"@radix-ui/colors": "^3.0.0",
 		"airtable": "^0.12.2",
-		"normalize.css": "^8.0.1",
-		"remarkable": "^2.0.1"
+		"marked": "^12.0.1",
+		"normalize.css": "^8.0.1"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-netlify": "^4.1.0",
@@ -37,18 +37,18 @@
 		"@sveltejs/vite-plugin-svelte": "^3.0.2",
 		"@types/eslint": "8.56.6",
 		"@types/remarkable": "^2.0.8",
-		"@typescript-eslint/eslint-plugin": "^7.3.1",
-		"@typescript-eslint/parser": "^7.3.1",
+		"@typescript-eslint/eslint-plugin": "^7.4.0",
+		"@typescript-eslint/parser": "^7.4.0",
 		"eslint": "^8.57.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.36.0-next.12",
+		"eslint-plugin-svelte": "^2.36.0-next.13",
 		"prettier": "^3.2.5",
 		"prettier-plugin-svelte": "^3.2.2",
 		"sass": "^1.72.0",
-		"svelte": "^5.0.0-next.82",
+		"svelte": "^5.0.0-next.84",
 		"svelte-check": "^3.6.8",
 		"tslib": "^2.6.2",
 		"typescript": "^5.4.3",
-		"vite": "^5.2.3"
+		"vite": "^5.2.6"
 	}
 }
