--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "barnsworthburning",
 	"version": "4.0.0",
 	"type": "module",
+	"packageManager": "yarn@4.1.1",
 	"engines": {
 		"node": "20.x"
 	},
