--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"@types/remarkable": "^2.0.8",
 		"@typescript-eslint/eslint-plugin": "^7.7.1",
 		"@typescript-eslint/parser": "^7.7.1",
+		"dotenv": "^16.4.5",
 		"eslint": "^9.1.1",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.38.0",
