Refactor atom feed to be easier to read and format using prettify-xml

--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
 		"@radix-ui/colors": "^3.0.0",
 		"airtable": "^0.12.2",
 		"marked": "^12.0.2",
-		"normalize.css": "^8.0.1"
+		"normalize.css": "^8.0.1",
+		"prettify-xml": "^1.2.0"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-netlify": "^4.2.0",
