--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
 		"xml-formatter": "^3.6.3"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-netlify": "^4.3.1",
-		"@sveltejs/adapter-node": "^5.2.0",
+		"@sveltejs/adapter-auto": "3.2.2",
 		"@sveltejs/kit": "^2.5.18",
 		"@sveltejs/vite-plugin-svelte": "^3.1.1",
 		"@types/eslint": "8.56.10",
