--- a/package.json
+++ b/package.json
@@ -33,24 +33,25 @@
 		"xml-formatter": "^3.6.3"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "3.2.2",
-		"@sveltejs/kit": "^2.5.20",
+		"@sveltejs/adapter-cloudflare": "4.7.2",
+		"@sveltejs/kit": "^2.5.22",
 		"@sveltejs/vite-plugin-svelte": "^3.1.1",
 		"@types/eslint": "9.6.0",
 		"@types/remarkable": "^2.0.8",
-		"@typescript-eslint/eslint-plugin": "^8.0.1",
-		"@typescript-eslint/parser": "^8.0.1",
+		"@typescript-eslint/eslint-plugin": "^8.1.0",
+		"@typescript-eslint/parser": "^8.1.0",
 		"dotenv": "^16.4.5",
-		"eslint": "^9.8.0",
+		"eslint": "^9.9.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.43.0",
 		"prettier": "^3.3.3",
 		"prettier-plugin-svelte": "^3.2.6",
 		"sass": "^1.77.8",
-		"svelte": "^5.0.0-next.210",
+		"svelte": "^5.0.0-next.220",
 		"svelte-check": "^3.8.5",
 		"tslib": "^2.6.3",
 		"typescript": "^5.5.4",
-		"vite": "^5.4.0"
+		"vite": "^5.4.0",
+		"wrangler": "^3.71.0"
 	}
 }
