--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
 	"devDependencies": {
 		"@sveltejs/adapter-cloudflare": "4.7.2",
 		"@sveltejs/kit": "^2.5.24",
-		"@sveltejs/vite-plugin-svelte": "^3.1.1",
+		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
 		"@types/eslint": "9.6.0",
 		"@types/remarkable": "^2.0.8",
 		"@typescript-eslint/eslint-plugin": "^8.2.0",
@@ -47,11 +47,11 @@
 		"prettier": "^3.3.3",
 		"prettier-plugin-svelte": "^3.2.6",
 		"sass": "^1.77.8",
-		"svelte": "^5.0.0-next.225",
-		"svelte-check": "^3.8.5",
+		"svelte": "^5.0.0-next.235",
+		"svelte-check": "^3.8.6",
 		"tslib": "^2.6.3",
 		"typescript": "^5.5.4",
-		"vite": "^5.4.1",
-		"wrangler": "^3.72.0"
+		"vite": "^5.4.2",
+		"wrangler": "^3.72.2"
 	}
 }
