--- a/package.json
+++ b/package.json
@@ -27,30 +27,30 @@
 	},
 	"dependencies": {
 		"airtable": "^0.12.2",
-		"marked": "^14.1.2",
+		"marked": "^14.1.3",
 		"normalize.css": "^8.0.1",
 		"xml-formatter": "^3.6.3"
 	},
 	"devDependencies": {
 		"@radix-ui/colors": "^3.0.0",
-		"@sveltejs/adapter-cloudflare": "4.7.2",
-		"@sveltejs/kit": "^2.6.3",
-		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.7",
+		"@sveltejs/adapter-cloudflare": "4.7.3",
+		"@sveltejs/kit": "^2.7.1",
+		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"@types/eslint": "9.6.1",
 		"@types/remarkable": "^2.0.8",
-		"@typescript-eslint/eslint-plugin": "^8.8.1",
-		"@typescript-eslint/parser": "^8.8.1",
+		"@typescript-eslint/eslint-plugin": "^8.10.0",
+		"@typescript-eslint/parser": "^8.10.0",
 		"dotenv": "^16.4.5",
-		"eslint": "^9.12.0",
+		"eslint": "^9.13.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.44.1",
+		"eslint-plugin-svelte": "^2.45.1",
 		"prettier": "^3.3.3",
 		"prettier-plugin-svelte": "^3.2.7",
-		"svelte": "^5.0.0-next.262",
-		"svelte-check": "^4.0.4",
-		"tslib": "^2.7.0",
-		"typescript": "^5.6.2",
-		"vite": "^5.4.8",
-		"wrangler": "^3.80.1"
+		"svelte": "^5.0.0",
+		"svelte-check": "^4.0.5",
+		"tslib": "^2.8.0",
+		"typescript": "^5.6.3",
+		"vite": "^5.4.9",
+		"wrangler": "^3.81.0"
 	}
 }
