--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 		"svelte-check": "^4.2.1",
 		"tslib": "^2.8.1",
 		"typescript": "^5.8.3",
+		"typescript-eslint": "^8.32.1",
 		"vite": "^6.3.5",
 		"wrangler": "^4.15.2"
 	}
