--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "barnsworthburning",
 	"version": "5.0.0",
 	"type": "module",
-	"packageManager": "yarn@4.9.4",
+	"packageManager": "yarn@4.12.0",
 	"engines": {
 		"node": "22.x"
 	},
@@ -26,32 +26,35 @@
 		"format": "prettier --write ."
 	},
 	"dependencies": {
+		"@aias/hozo": "^0.1.0",
 		"airtable": "^0.12.2",
-		"marked": "^16.2.1",
+		"drizzle-orm": "1.0.0-beta.1-4e7eaa6",
+		"marked": "^17.0.1",
 		"normalize.css": "^8.0.1",
-		"xml-formatter": "^3.6.6"
+		"xml-formatter": "^3.6.7",
+		"zod": "^4.1.12"
 	},
 	"devDependencies": {
 		"@radix-ui/colors": "^3.0.0",
-		"@sveltejs/adapter-cloudflare": "7.2.3",
-		"@sveltejs/kit": "^2.37.0",
-		"@sveltejs/vite-plugin-svelte": "^6.1.3",
+		"@sveltejs/adapter-cloudflare": "7.2.4",
+		"@sveltejs/kit": "^2.49.0",
+		"@sveltejs/vite-plugin-svelte": "^6.2.1",
 		"@types/eslint": "9.6.1",
 		"@types/remarkable": "^2.0.8",
-		"@typescript-eslint/eslint-plugin": "^8.41.0",
-		"@typescript-eslint/parser": "^8.41.0",
-		"dotenv": "^17.2.1",
-		"eslint": "^9.34.0",
+		"@typescript-eslint/eslint-plugin": "^8.47.0",
+		"@typescript-eslint/parser": "^8.47.0",
+		"dotenv": "^17.2.3",
+		"eslint": "^9.39.1",
 		"eslint-config-prettier": "^10.1.8",
-		"eslint-plugin-svelte": "^3.11.0",
+		"eslint-plugin-svelte": "^3.13.0",
 		"prettier": "^3.6.2",
 		"prettier-plugin-svelte": "^3.4.0",
-		"svelte": "^5.38.6",
-		"svelte-check": "^4.3.1",
+		"svelte": "^5.43.14",
+		"svelte-check": "^4.3.4",
 		"tslib": "^2.8.1",
-		"typescript": "^5.9.2",
-		"typescript-eslint": "^8.41.0",
-		"vite": "^7.1.4",
-		"wrangler": "^4.33.1"
+		"typescript": "^5.9.3",
+		"typescript-eslint": "^8.47.0",
+		"vite": "^7.2.4",
+		"wrangler": "^4.50.0"
 	}
 }
