--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
 	"name": "barnsworthburning",
 	"version": "5.0.0",
 	"type": "module",
-	"packageManager": "yarn@4.12.0",
+	"packageManager": "pnpm@10.26.2",
 	"engines": {
-		"node": "22.x"
+		"node": "24.x"
 	},
 	"repository": {
 		"type": "git",
@@ -26,35 +26,35 @@
 		"format": "prettier --write ."
 	},
 	"dependencies": {
-		"@aias/hozo": "^0.1.0",
 		"airtable": "^0.12.2",
-		"drizzle-orm": "1.0.0-beta.1-4e7eaa6",
 		"marked": "^17.0.1",
 		"normalize.css": "^8.0.1",
 		"xml-formatter": "^3.6.7",
-		"zod": "^4.1.12"
+		"zod": "^4.2.1"
 	},
 	"devDependencies": {
+		"@eslint/js": "^9.39.2",
 		"@radix-ui/colors": "^3.0.0",
 		"@sveltejs/adapter-cloudflare": "7.2.4",
-		"@sveltejs/kit": "^2.49.0",
+		"@sveltejs/kit": "^2.49.2",
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
 		"@types/eslint": "9.6.1",
 		"@types/remarkable": "^2.0.8",
-		"@typescript-eslint/eslint-plugin": "^8.47.0",
-		"@typescript-eslint/parser": "^8.47.0",
+		"@typescript-eslint/eslint-plugin": "^8.50.1",
+		"@typescript-eslint/parser": "^8.50.1",
 		"dotenv": "^17.2.3",
-		"eslint": "^9.39.1",
+		"eslint": "^9.39.2",
 		"eslint-config-prettier": "^10.1.8",
-		"eslint-plugin-svelte": "^3.13.0",
-		"prettier": "^3.6.2",
-		"prettier-plugin-svelte": "^3.4.0",
-		"svelte": "^5.43.14",
-		"svelte-check": "^4.3.4",
+		"eslint-plugin-svelte": "^3.13.1",
+		"globals": "^16.5.0",
+		"prettier": "^3.7.4",
+		"prettier-plugin-svelte": "^3.4.1",
+		"svelte": "^5.46.1",
+		"svelte-check": "^4.3.5",
 		"tslib": "^2.8.1",
 		"typescript": "^5.9.3",
-		"typescript-eslint": "^8.47.0",
-		"vite": "^7.2.4",
-		"wrangler": "^4.50.0"
+		"typescript-eslint": "^8.50.1",
+		"vite": "^7.3.0",
+		"wrangler": "^4.54.0"
 	}
 }
