--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
 		"airtable": "^0.12.2",
 		"marked": "^17.0.1",
 		"normalize.css": "^8.0.1",
-		"xml-formatter": "^3.6.7",
-		"zod": "^4.2.1"
+		"xml-formatter": "^3.6.7"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.39.2",
@@ -40,8 +39,8 @@
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
 		"@types/eslint": "9.6.1",
 		"@types/remarkable": "^2.0.8",
-		"@typescript-eslint/eslint-plugin": "^8.50.1",
-		"@typescript-eslint/parser": "^8.50.1",
+		"@typescript-eslint/eslint-plugin": "^8.51.0",
+		"@typescript-eslint/parser": "^8.51.0",
 		"dotenv": "^17.2.3",
 		"eslint": "^9.39.2",
 		"eslint-config-prettier": "^10.1.8",
@@ -53,7 +52,7 @@
 		"svelte-check": "^4.3.5",
 		"tslib": "^2.8.1",
 		"typescript": "^5.9.3",
-		"typescript-eslint": "^8.50.1",
+		"typescript-eslint": "^8.51.0",
 		"vite": "^7.3.0",
 		"wrangler": "^4.54.0"
 	}
