--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "barnsworthburning",
 	"version": "5.0.0",
 	"type": "module",
-	"packageManager": "pnpm@10.26.2",
+	"packageManager": "pnpm@10.29.1+sha512.48dae233635a645768a3028d19545cacc1688639eeb1f3734e42d6d6b971afbf22aa1ac9af52a173d9c3a20c15857cfa400f19994d79a2f626fcc73fccda9bbc",
 	"engines": {
 		"node": "24.x"
 	},
@@ -29,32 +29,30 @@
 		"airtable": "^0.12.2",
 		"marked": "^17.0.1",
 		"normalize.css": "^8.0.1",
-		"xml-formatter": "^3.6.7",
-		"zod": "^4.2.1"
+		"xml-formatter": "^3.6.7"
 	},
 	"devDependencies": {
-		"@eslint/js": "^9.39.2",
+		"@eslint/js": "^10.0.1",
 		"@radix-ui/colors": "^3.0.0",
-		"@sveltejs/adapter-cloudflare": "7.2.4",
-		"@sveltejs/kit": "^2.49.2",
-		"@sveltejs/vite-plugin-svelte": "^6.2.1",
+		"@sveltejs/adapter-cloudflare": "7.2.6",
+		"@sveltejs/kit": "^2.50.2",
+		"@sveltejs/vite-plugin-svelte": "^6.2.4",
 		"@types/eslint": "9.6.1",
 		"@types/remarkable": "^2.0.8",
-		"@typescript-eslint/eslint-plugin": "^8.50.1",
-		"@typescript-eslint/parser": "^8.50.1",
-		"dotenv": "^17.2.3",
-		"eslint": "^9.39.2",
+		"@typescript-eslint/eslint-plugin": "^8.54.0",
+		"@typescript-eslint/parser": "^8.54.0",
+		"eslint": "^10.0.0",
 		"eslint-config-prettier": "^10.1.8",
-		"eslint-plugin-svelte": "^3.13.1",
-		"globals": "^16.5.0",
-		"prettier": "^3.7.4",
+		"eslint-plugin-svelte": "^3.14.0",
+		"globals": "^17.3.0",
+		"prettier": "^3.8.1",
 		"prettier-plugin-svelte": "^3.4.1",
-		"svelte": "^5.46.1",
-		"svelte-check": "^4.3.5",
+		"svelte": "^5.50.0",
+		"svelte-check": "^4.3.6",
 		"tslib": "^2.8.1",
 		"typescript": "^5.9.3",
-		"typescript-eslint": "^8.50.1",
-		"vite": "^7.3.0",
-		"wrangler": "^4.54.0"
+		"typescript-eslint": "^8.54.0",
+		"vite": "^7.3.1",
+		"wrangler": "^4.63.0"
 	}
 }
