Add Drizzle ORM and /hozo route for database-backed index
Connects to the shared PostgreSQL database via postgres.js driver and
@aias/hozo schema. The /hozo route queries curated, non-private entity
and concept records and renders them in the same index layout as the
existing Airtable-backed footer.

--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
 		"format": "prettier --write ."
 	},
 	"dependencies": {
+		"@aias/hozo": "0.3.0",
 		"airtable": "^0.12.2",
+		"drizzle-orm": "1.0.0-beta.15-859cf75",
 		"marked": "^17.0.2",
 		"normalize.css": "^8.0.1",
+		"postgres": "^3.4.8",
 		"xml-formatter": "^3.6.7"
 	},
 	"devDependencies": {
